--- a/src/models/convert_weights_to_torch.ipynb
+++ b/src/models/convert_weights_to_torch.ipynb
@@ -14,38 +14,12 @@
     "import pickle\n",
     "import re\n",
     "from collections import OrderedDict\n",
-    "sys.path.append('./network/')\n",
-    "from networks import BranchedNetwork"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88f230ef",
-   "metadata": {},
-   "source": [
-    "# Verified for the 2022 network"
+    "from networks_2022 import BranchedNetwork"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1fe00d9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Load saved weights and biases- split into three .npy files to upload to github\n",
-    "weights_dir = os.getcwd() + '/network/weights/'\n",
-    "with open(weights_dir + 'network_weights_early_layers.p', 'rb') as f:\n",
-    "    weights_biases = pickle.load(f)\n",
-    "with open(weights_dir + 'network_weights_genre_branch.p', 'rb') as f:\n",
-    "    genre_branch = pickle.load(f)\n",
-    "with open(weights_dir + 'network_weights_word_branch.p', 'rb') as f:\n",
-    "    word_branch = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8e62bcbf",
    "metadata": {},
    "outputs": [],
@@ -55,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e891a740",
    "metadata": {},
    "outputs": [],
@@ -65,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "3eb925e0",
    "metadata": {},
    "outputs": [],
@@ -73,26 +47,6 @@
     "weights_path = './weights/'\n",
     "with open(weights_path+ 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv5_W_py3.cpy', 'rb') as f:\n",
     "    weights_biases = pickle.load(f,  encoding=\"latin1\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8ec386d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Have weights and biases just need to compile them into the same dict as you did with the 2018 paper "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "950cbea0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = os.listdir(weights_path)\n"
    ]
   },
   {
@@ -105,7 +59,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv4_W.cpy', 'branched_network_weights.pt', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv5_G_py3.cpy', '.DS_Store', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv4_G.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7fctop_W_py3.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv5_W.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv4_G_py3.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7fc6_W_py3.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv1.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv3.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv5_G.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv2.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7fc6_W.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7fc6_G_py3.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7fctop_G.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv3_py3.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv4_W_py3.cpy', 'pickle3_weights.py', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv2_py3.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7fctop_G_py3.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7fctop_W.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7fc6_G.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv5_W_py3.cpy', 'net7_tf_2020w_naturalistic_not_resampled_held_out_speaker_NOTIMIT_seed_0_1en4.0.0001.sum_0.0001_ckpt_7conv1_py3.cpy']\n",
       "conv5_G\n",
       "fctop_W\n",
       "conv4_G\n",
@@ -121,7 +74,7 @@
     }
    ],
    "source": [
-    "print(files)\n",
+    "files = os.listdir(weights_path)\n",
     "\n",
     "weights_biases = {}\n",
     "for f in files:\n",
@@ -155,14 +108,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "fd378cc8",
-   "metadata": {},
-   "source": [
-    "print(weights_biases)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "e85d463c",
@@ -172,9 +117,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/erica/Documents/hallucnn/src/models/layers.py:54: UserWarning: Inconsistent tf pad calculation in ConvLayer.\n",
+      "/Users/chingfang/Code/hallucnn/src/models/layers.py:78: UserWarning: Inconsistent tf pad calculation in ConvLayer.\n",
       "  warnings.warn('Inconsistent tf pad calculation in ConvLayer.')\n",
-      "/Users/erica/Documents/hallucnn/src/models/layers.py:130: UserWarning: Inconsistent tf pad calculation: 0, 1\n",
+      "/Users/chingfang/Code/hallucnn/src/models/layers.py:173: UserWarning: Inconsistent tf pad calculation: 0, 1\n",
       "  warnings.warn(f'Inconsistent tf pad calculation: {pad_left}, {pad_right}')\n"
      ]
     }
@@ -289,35 +234,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "e6d6b107",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'BranchedNetwork' object has no attribute 'load'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mbn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m(state_dict)\n",
-      "File \u001b[0;32m~/miniforge3/envs/py38/lib/python3.8/site-packages/torch/nn/modules/module.py:1177\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1175\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[1;32m   1176\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1177\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   1178\u001b[0m     \u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, name))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'BranchedNetwork' object has no attribute 'load'"
-     ]
-    }
-   ],
-   "source": [
-    "bn.load(state_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "7db5ff74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(state_dict, 'branched_network_weights.pt')"
+    "torch.save(state_dict, './weights/networks_2022_weights.pt')"
    ]
   },
   {
