Predify network and train in Jupyter notebook

--- a/src/models/evaluate_pytorch_conversion.ipynb
+++ b/src/models/evaluate_pytorch_conversion.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2a0cad41",
+   "metadata": {},
+   "source": [
+    "# Tested for `networks_2022`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "b185f7f1",
