Clean up and merge notebooks

--- a/src/models/01-validate-net-outputs.ipynb
+++ b/src/models/01-validate-net-outputs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import h5py\n",
+    "import pickle\n",
     "root = os.path.dirname(os.path.abspath(os.curdir))\n",
     "sys.path.append(root)\n",
     "\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,42 +42,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/share/issa/users/es3773/temp-hallucnn/src/models/layers.py:78: UserWarning: Inconsistent tf pad calculation in ConvLayer.\n",
-      "  warnings.warn('Inconsistent tf pad calculation in ConvLayer.')\n",
-      "/share/issa/users/es3773/temp-hallucnn/src/models/layers.py:173: UserWarning: Inconsistent tf pad calculation: 0, 1\n",
-      "  warnings.warn(f'Inconsistent tf pad calculation: {pad_left}, {pad_right}')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "net = BranchedNetwork()\n",
-    "net.load_state_dict(torch.load(f'{engram_dir}networks_2022_weights.pt'))"
+    "# Compare Torch net to Tensorflow net"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Torch network outputs\n",
+    "net = BranchedNetwork()\n",
+    "net.load_state_dict(torch.load(f'{engram_dir}networks_2022_weights.pt'))\n",
+    "\n",
     "y_hats = []\n",
     "\n",
     "with h5py.File(f\"{engram_dir}PsychophysicsWord2017W_not_resampled.hdf5\", 'r') as f_in:\n",
@@ -86,40 +67,18 @@
     "        y_hat = int(torch.argmax(word))\n",
     "        y_hats.append(y_hat)\n",
     "        if len(y_hats) > 20:\n",
-    "            break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[229, 312, 525, 3, 393, 5, 6, 7, 8, 9, 10, 11, 12, 13, 126, 108, 15, 298, 17, 46]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Torch network outputs\n",
+    "            break\n",
+    "\n",
     "print(y_hats[:20])"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Compare to TF labels"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tensorflow network outputs\n",
     "tf_y_hats = np.array([229, 312, 525, 3, 393, 5, 6, 7, 8, 9, 10, 11, 12, 13, 126, 108, 15, 298, 17, 46, 152, 388, 278, 459, 256, 23, 14, 25, 26, 27, 129, 29, 30, 31, 63, 337, 34, 216, 36, 37, 38, 241, 40, 41, 183, 42, 393, 240, 45, 196, 46, 487, 48, 129, 142, 51, 269, 519, 54, 55, 284, 57, 65, 58, 239, 59, 376, 62, 63, 158, 345, 66, 67, 68, 69, 70, 394, 72, 494, 74, 109, 75, 48, 78, 343, 455, 487, 413, 82, 109, 84, 496, 243, 490, 9, 24, 89, 0, 110, 259])\n",
     "tf_y_hats_no_Dropout = [229, 312, 525, 3, 393, 5, 6, 7, 8, 9, 10, 11, 12, 13, 126, 108, 15, 298, 17, 46, 152, 388, 278, 459, 256, 23, 14, 25, 26, 27, 129, 29, 30, 31, 63, 337, 34, 216, 36, 37, 38, 241, 40, 41, 183, 42, 393, 240, 45, 196, 46, 487, 48, 129, 142, 51, 269, 519, 54, 55, 284, 57, 65, 58, 239, 59, 376, 62, 63, 158, 345, 66, 67, 68, 69, 70, 394, 72, 494, 74, 109, 75, 48, 78, 343, 455, 487, 413, 82, 109, 84, 496, 243, 490, 9, 24, 89, 0, 110, 259]\n",
     "print(tf_y_hats[:20])"
@@ -127,42 +86,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(np.where(tf_y_hats == np.array(y_hats))[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# http://localhost:1339/notebooks/JupyterNotebooks/thesis/analysesUsingNAC/net7_tf_2020w-naturalistic_heldOutSpkr.ipynb\n",
-    "\n",
-    "# Think this is WSJ only -- 531 words in train set rather tha 587"
+    "# Number of matches\n",
+    "print(len(np.where(tf_y_hats == np.array(y_hats))[0]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Compare to True labels"
+    "# Compare Torch net to Ground truth labels\n",
+    "Also save the info on which examples the net gets correct/incorrect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,25 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/es3773/.local/lib/python3.7/site-packages/torch/nn/functional.py:780: UserWarning: Note that order of the arguments: ceil_mode and return_indices will changeto match the args list in nn.MaxPool2d in a future release.\n",
-      "  warnings.warn(\"Note that order of the arguments: ceil_mode and return_indices will change\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_hats = []\n",
     "corrects = []\n",
     "\n",
     "with h5py.File(f\"{engram_dir}PsychophysicsWord2017W_not_resampled.hdf5\", 'r') as f_in:\n",
     "    for ind in range(len(f_in['data'])):\n",
-    "        word, genre = net(torch.tensor(np.reshape( f_in['data'][ind],(164,400))))\n",
+    "        word, genre =r net(torch.tensor(np.reshape( f_in['data'][ind],(164,400))))\n",
     "        \n",
     "        y_hat = int(torch.argmax(word))\n",
     "        y_hats.append(y_hat)\n",
@@ -224,25 +157,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Save net predictions and mistakes to file\n",
     "with open(f\"{engram_dir}PsychophysicsWord2017W_net_performance.p\", 'wb') as f:\n",
     "    results = {\n",
     "        'net_pred': np.array(y_hats),\n",
     "        'net_mistakes': np.logical_not(corrects)\n",
     "    }\n",
     "    pickle.dump(results, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compare Predified-Net with Torch Net\n",
+    "The outputs should match at timestep 0 of the predified-net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEVICE = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
+    "print(f'Device: {DEVICE}')\n",
+    "\n",
+    "checkpoints_dir = f'{engram_dir}hcnn/checkpoints/'\n",
+    "tensorboard_dir = f'{engram_dir}hcnn/tensorboard/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specify which predified network you want to test\n",
+    "from pbranchednetwork_all import PBranchedNetwork_AllSeparateHP\n",
+    "PNetClass = PBranchedNetwork_AllSeparateHP\n",
+    "pnet_name = 'all'\n",
+    "p_layers = 'All Layers'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Torch network outputs from before\n",
+    "print(y_hats[:20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predified network outputs\n",
+    "pnet = PNetClass(net, build_graph=True)\n",
+    "pnet.load_state_dict(torch.load(\n",
+    "    f\"{checkpoints_dir}{pnet_name}/{pnet_name}-50-regular.pth\",\n",
+    "    map_location='cpu'\n",
+    "    ))\n",
+    "pnet.to(DEVICE)\n",
+    "pnet.build_graph = False        # only required for training\n",
+    "pnet.eval()\n",
+    "\n",
+    "y_hats = []\n",
+    "\n",
+    "f_in = h5py.File(f\"{engram_dir}PsychophysicsWord2017W_not_resampled.hdf5\", 'r')\n",
+    "for ind in range(len(f_in['data'])):\n",
+    "    pnet.reset()\n",
+    "    _input = torch.tensor(np.reshape(f_in['data'][ind],(164,400))).to(DEVICE)\n",
+    "    word, genre = pnet(_input)\n",
+    "    y_hat = int(torch.argmax(word))\n",
+    "    y_hats.append(y_hat)\n",
+    "    if len(y_hats) > 20:\n",
+    "        break\n",
+    "        \n",
+    "print(y_hats[:20])"
    ]
   },
   {
