--- a/src/models/03-train-pnet.ipynb
+++ b/src/models/03-train-pnet.ipynb
@@ -27,6 +27,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Specify Network to train\n",
+    "TODO: This should be converted to a script that accepts arguments for which network to train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pbranchednetwork_a1 import PBranchedNetwork_A1SeparateHP\n",
+    "PNetClass = PBranchedNetwork_A1SeparateHP\n",
+    "pnet_name = 'a1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pbranchednetwork_conv1 import PBranchedNetwork_Conv1SeparateHP\n",
+    "PNetClass = PBranchedNetwork_Conv1SeparateHP\n",
+    "pnet_name = 'conv1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pbranchednetwork_all import PBranchedNetwork_AllSeparateHP\n",
+    "PNetClass = PBranchedNetwork_AllSeparateHP\n",
+    "pnet_name = 'all'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Parameters"
    ]
   },
@@ -56,17 +97,6 @@
     "checkpoints_dir = f'{engram_dir}hcnn/checkpoints/'\n",
     "tensorboard_dir = f'{engram_dir}hcnn/tensorboard/'\n",
     "datafile = f'{engram_dir}seed_542_word_clean_random_order.hdf5'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pbranchednetwork_a1 import PBranchedNetwork_A1SeparateHP\n",
-    "PNetClass = PBranchedNetwork_A1SeparateHP\n",
-    "pnet_name = 'a1'"
    ]
   },
   {
