--- a/src/models/08-eval-output-entropy.ipynb
+++ b/src/models/08-eval-output-entropy.ipynb
@@ -87,6 +87,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Choose which dataset you want to evaluate on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exclude_timit = True\n",
+    "exclude_correct = True\n",
+    "exclude_incorrect = False\n",
+    "dset_name = 'incorrects'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Parameters"
    ]
   },
@@ -330,12 +349,15 @@
    "source": [
     "def eval_entropy(\n",
     "    pnet, bg_type='n/a',\n",
-    "    exclude_timit=True, exclude_correct=True\n",
+    "    exclude_timit=True, exclude_correct=True, exclude_incorrect=False\n",
     "    ):\n",
     "    \n",
     "    bg_idxs = bg==bg_type\n",
     "    if exclude_timit:\n",
     "        bg_idxs = np.logical_and(bg_idxs, orig_dset=='WSJ')\n",
+    "    if exclude_incorrect:\n",
+    "        net_corrects = np.logical_not(net_mistakes)\n",
+    "        bg_idxs = np.logical_and(bg_idxs, net_corrects)\n",
     "    if exclude_correct:\n",
     "        bg_idxs = np.logical_and(bg_idxs, net_mistakes)\n",
     "\n",
@@ -644,7 +666,12 @@
     "    PNetClass, pnet_name, p_layers = arg\n",
     "    pnet = load_pnet(PNetClass, pnet_name)\n",
     "    for _bg_type in np.unique(bg):\n",
-    "        timesteps, entros, snrs, df = eval_entropy(pnet, bg_type=_bg_type)\n",
+    "        timesteps, entros, snrs, df = eval_entropy(\n",
+    "            pnet, bg_type=_bg_type,\n",
+    "            exclude_timit=exclude_timit,\n",
+    "            exclude_correct=exclude_correct,\n",
+    "            exclude_incorrect=exclude_incorrect\n",
+    "            )\n",
     "        plt.figure()\n",
     "        hue = None if _bg_type == 'n/a' else 'SNR'\n",
     "        g = sns.lineplot(\n",
@@ -656,7 +683,7 @@
     "        plt.legend(title='SNR', labels=[-11, -9, -3, 0, 3])\n",
     "        if _bg_type == 'n/a':\n",
     "            _bg_type = 'None'\n",
-    "        plt.savefig(fig_dir + f'{pnet_name}_entro_{_bg_type}.png', dpi=300)\n",
+    "        plt.savefig(fig_dir + f'entro_{dset_name}_{pnet_name}__bg_type}.png', dpi=300)\n",
     "        plt.show(g)"
    ]
   },
