--- a/src/models/10-eval-encoder-representations.ipynb
+++ b/src/models/10-eval-encoder-representations.ipynb
@@ -97,6 +97,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Choose which dataset you want to evaluate on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exclude_timit = True\n",
+    "exclude_correct = True\n",
+    "exclude_incorrect = False\n",
+    "dset_name = 'incorrects'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Parameters"
    ]
   },
@@ -181,31 +200,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def row_rms(A, B, do_compare_rows=True):\n",
-    "    \"\"\"\n",
-    "    RMS the rows of a matrix\n",
+    "# A few distance metrics\n",
     "\n",
-    "    given A, B, returns vector of pearson correleation coefficients where r[ii] = corr(A[:,ii],B[:,ii])\n",
+    "def rms(A, B, do_compare_rows=True):\n",
+    "    \"\"\"\n",
+    "    RMS of flattened vectors\n",
     "    \"\"\"\n",
     "    \n",
     "    if torch.is_tensor(A):\n",
     "        A = A.numpy()\n",
     "    if torch.is_tensor(B):\n",
     "        B = B.numpy()\n",
-    "    A = A.squeeze()\n",
-    "    B = B.squeeze()\n",
-    "\n",
-    "    if do_compare_rows:\n",
-    "        A, B = A.T, B.T\n",
+    "    A = A.astype(float)\n",
+    "    B = B.astype(float)\n",
+    "    A = A.flatten()\n",
+    "    B = B.flatten()\n",
     "        \n",
-    "    stim = (A.astype(float)-B.astype(float)) \n",
-    "    out = np.sqrt(np.mean(stim * stim, axis = 0))\n",
+    "    stim = A - B\n",
+    "    out = np.sqrt(np.mean(stim * stim))\n",
     "\n",
-    "    return out"
+    "    return out\n",
+    "\n",
+    "def tanimoto_distance(A, B):\n",
+    "    \"\"\"\n",
+    "    Tanimoto distance of flattened vector\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if torch.is_tensor(A):\n",
+    "        A = A.numpy()\n",
+    "    if torch.is_tensor(B):\n",
+    "        B = B.numpy()\n",
+    "    A = A.astype(float)\n",
+    "    B = B.astype(float)\n",
+    "    A = A.flatten()\n",
+    "    B = B.flatten()\n",
+    "    \n",
+    "    _out = np.dot(A, B)/(np.linalg.norm(A)**2 + np.linalg.norm(B)**2 - np.dot(A,B))\n",
+    "    return _out\n",
+    "    \n",
+    "def cosine_similarity(A, B):\n",
+    "    \"\"\"\n",
+    "    Cosine similarity of flattened vector\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if torch.is_tensor(A):\n",
+    "        A = A.numpy()\n",
+    "    if torch.is_tensor(B):\n",
+    "        B = B.numpy()\n",
+    "    A = A.astype(float)\n",
+    "    B = B.astype(float)\n",
+    "    A = A.flatten()\n",
+    "    B = B.flatten()\n",
+    "    \n",
+    "    out = []\n",
+    "    for channel in range(n_channels):\n",
+    "        a = A[channel]\n",
+    "        b = B[channel]\n",
+    "        _out = np.dot(a, b)/(np.linalg.norm(a)+np.linalg.norm(b)-np.dot(a,b))\n",
+    "        if np.isnan(_out):\n",
+    "            print(f'nan: {np.linalg.norm(a)}, {np.linalg.norm(b)}')\n",
+    "        out.append(_out)\n",
+    "\n",
+    "    return np.mean(out)"
    ]
   },
   {
@@ -224,12 +284,15 @@
    "source": [
     "def eval_correlations(\n",
     "    pnet, bg_type='n/a', noise_std=0,\n",
-    "    exclude_timit=True, exclude_correct=True\n",
+    "    exclude_timit=True, exclude_correct=True, exclude_incorrect=False\n",
     "    ):\n",
     "    \n",
     "    bg_idxs = bg==bg_type\n",
     "    if exclude_timit:\n",
     "        bg_idxs = np.logical_and(bg_idxs, orig_dset=='WSJ')\n",
+    "    if exclude_incorrect:\n",
+    "        net_corrects = np.logical_not(net_mistakes)\n",
+    "        bg_idxs = np.logical_and(bg_idxs, net_corrects)\n",
     "    if exclude_correct:\n",
     "        bg_idxs = np.logical_and(bg_idxs, net_mistakes)\n",
     "    \n",
@@ -267,11 +330,11 @@
     "                    for enc_num, enc_name in enumerate(['conv1', 'conv2', 'conv3', 'conv4_W', 'conv5_W']):\n",
     "                        noisy_repr = noisy_repr_dict[enc_name]\n",
     "                        clean_repr = clean_repr_dict[enc_name]\n",
-    "                        rms = row_rms(noisy_repr, clean_repr)\n",
+    "                        _rms = rms(noisy_repr, clean_repr)\n",
     "                        if j == 0:\n",
-    "                            base_rms[enc_name] = rms\n",
+    "                            base_rms[enc_name] = _rms\n",
     "                        timesteps.append(j)\n",
-    "                        correlations.append(rms/base_rms[enc_name])\n",
+    "                        correlations.append(_rms/base_rms[enc_name])\n",
     "                        snrs.append(snr_type)\n",
     "                        encoders.append(enc_num+1)\n",
     "    df = pd.DataFrame({\n",
@@ -488,7 +551,12 @@
     "    for _bg_type in np.unique(bg):\n",
     "        if _bg_type == 'n/a': continue\n",
     "        if not (_bg_type == 'AudScene' or _bg_type == 'Babble8Spkr'): continue\n",
-    "        timesteps, correlations, snrs, encoders, df = eval_correlations(pnet, bg_type=_bg_type)\n",
+    "        timesteps, correlations, snrs, encoders, df = eval_correlations(\n",
+    "            pnet, bg_type=_bg_type,\n",
+    "            exclude_timit=exclude_timit,\n",
+    "            exclude_correct=exclude_correct,\n",
+    "            exclude_incorrect=exclude_incorrect\n",
+    "            )\n",
     "        for snr in np.unique(snrs):\n",
     "            with open(pickle_dir + f'{pnet_name}_corr_{_bg_type}_snr{snr}.p', 'wb') as f:\n",
     "                pickle.dump(df, f)\n",
@@ -499,12 +567,11 @@
     "                data=df[df['SNR'] == snr]\n",
     "                )\n",
     "            plt.title(f'{p_layers}: {_bg_type}, SNR = {snr}')\n",
-    "            plt.ylabel('RMS of Representation from Clean')\n",
+    "            plt.ylabel('Distance Metric')\n",
     "            plt.xticks([0, 1, 2, 3, 4])\n",
     "            plt.ylim(top=1.3)\n",
     "            plt.axhline(1, color='gray', linestyle='--')\n",
-    "            #plt.legend(title='SNR', labels=[-11, -9, -3, 0, 3])\n",
-    "            plt.savefig(fig_dir + f'{pnet_name}_reprcorr_{_bg_type}_snr{snr}.png', dpi=300)\n",
+    "            plt.savefig(fig_dir + f'encodrepr_{dset_name}_{pnet_name}_{_bg_type}_snr{snr}.png', dpi=300)\n",
     "            plt.show(g)"
    ]
   },
