--- a/src/models/07-eval-accuracy.ipynb
+++ b/src/models/07-eval-accuracy.ipynb
@@ -96,6 +96,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Choose which dataset you want to evaluate on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exclude_timit = True\n",
+    "exclude_correct = True\n",
+    "exclude_incorrect = False\n",
+    "dset_name = 'incorrects'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Parameters"
    ]
   },
@@ -331,12 +350,15 @@
    "source": [
     "def eval_acc(\n",
     "    pnet, bg_type='n/a',\n",
-    "    exclude_timit=True, exclude_correct=True\n",
+    "    exclude_timit=True, exclude_correct=True, exclude_incorrect=False\n",
     "    ):\n",
     "    \n",
     "    bg_idxs = bg==bg_type\n",
     "    if exclude_timit:\n",
     "        bg_idxs = np.logical_and(bg_idxs, orig_dset=='WSJ')\n",
+    "    if exclude_incorrect:\n",
+    "        net_corrects = np.logical_not(net_mistakes)\n",
+    "        bg_idxs = np.logical_and(bg_idxs, net_corrects)\n",
     "    if exclude_correct:\n",
     "        bg_idxs = np.logical_and(bg_idxs, net_mistakes)\n",
     "\n",
@@ -510,7 +532,12 @@
     "    PNetClass, pnet_name, p_layers = arg\n",
     "    pnet = load_pnet(PNetClass, pnet_name)\n",
     "    for _bg_type in np.unique(bg):\n",
-    "        timesteps, accs, snrs, df = eval_acc(pnet, bg_type=_bg_type)\n",
+    "        timesteps, accs, snrs, df = eval_acc(\n",
+    "            pnet, bg_type=_bg_type,\n",
+    "            exclude_timit=exclude_timit,\n",
+    "            exclude_correct=exclude_correct,\n",
+    "            exclude_incorrect=exclude_incorrect\n",
+    "            )\n",
     "        plt.figure()\n",
     "        hue = None if _bg_type == 'n/a' else 'SNR'\n",
     "        g = sns.lineplot(\n",
@@ -522,9 +549,9 @@
     "        plt.legend(title='SNR', labels=[-11, -9, -3, 0, 3])\n",
     "        if _bg_type == 'n/a':\n",
     "            _bg_type = 'None'\n",
-    "        with open(pickle_dir + f'{pnet_name}_acc_{_bg_type}.p', 'wb') as f:\n",
+    "        with open(pickle_dir + f'acc_{dset_name}_{pnet_name}_{_bg_type}.p', 'wb') as f:\n",
     "            pickle.dump(df, f)\n",
-    "        plt.savefig(fig_dir + f'{pnet_name}_acc_{_bg_type}.png', dpi=300)\n",
+    "        plt.savefig(fig_dir + f'acc_{dset_name}_{pnet_name}_{_bg_type}.png', dpi=300)\n",
     "        plt.show(g)"
    ]
   },
