--- a/src/models/02-predify-network.ipynb
+++ b/src/models/02-predify-network.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "61b194bc",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "dcc6f67a",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/share/issa/users/es3773/temp-hallucnn/src/models/layers.py:78: UserWarning: Inconsistent tf pad calculation in ConvLayer.\n",
+      "/share/issa/users/es3773/hallucnn/src/models/layers.py:78: UserWarning: Inconsistent tf pad calculation in ConvLayer.\n",
       "  warnings.warn('Inconsistent tf pad calculation in ConvLayer.')\n",
-      "/share/issa/users/es3773/temp-hallucnn/src/models/layers.py:173: UserWarning: Inconsistent tf pad calculation: 0, 1\n",
+      "/share/issa/users/es3773/hallucnn/src/models/layers.py:173: UserWarning: Inconsistent tf pad calculation: 0, 1\n",
       "  warnings.warn(f'Inconsistent tf pad calculation: {pad_left}, {pad_right}')\n"
      ]
     }
@@ -35,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "114f45b6",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f63abe76",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a2c35381",
    "metadata": {},
    "outputs": [
     {
@@ -113,8 +108,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 0. A default module will be inferred based on the other PCoders.\n",
+      "  config = parse_toml(config_file)\n",
+      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 0. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
+      "  config = parse_toml(config_file)\n",
+      "/home/es3773/.local/lib/python3.7/site-packages/torch/nn/functional.py:780: UserWarning: Note that order of the arguments: ceil_mode and return_indices will changeto match the args list in nn.MaxPool2d in a future release.\n",
+      "  warnings.warn(\"Note that order of the arguments: ceil_mode and return_indices will change\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "predify.predify(net, 'pconfigs/conv3_default.toml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 1. A default module will be inferred based on the other PCoders.\n",
+      "  config = parse_toml(config_file)\n",
+      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 1. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
+      "  config = parse_toml(config_file)\n",
+      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 2. A default module will be inferred based on the other PCoders.\n",
+      "  config = parse_toml(config_file)\n",
+      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 2. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
+      "  config = parse_toml(config_file)\n"
+     ]
+    }
+   ],
+   "source": [
+    "predify.predify(net, 'pconfigs/conv345_default.toml')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ae0b2a41",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -122,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
