Lazy loading of training dataset; clean up unused PNets

--- a/src/models/02-predify-network.ipynb
+++ b/src/models/02-predify-network.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "id": "f6b53ab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "id": "a5c2d5a5",
    "metadata": {},
    "outputs": [
     {
@@ -33,128 +35,47 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "1237af1a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 0. A default module will be inferred based on the other PCoders.\n",
-      "  config = parse_toml(config_file)\n",
-      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 0. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
-      "  config = parse_toml(config_file)\n",
-      "/home/es3773/.local/lib/python3.7/site-packages/torch/nn/functional.py:780: UserWarning: Note that order of the arguments: ceil_mode and return_indices will changeto match the args list in nn.MaxPool2d in a future release.\n",
-      "  warnings.warn(\"Note that order of the arguments: ceil_mode and return_indices will change\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "predify.predify(net, 'pconfigs/conv1_default.toml')"
+    "toml_file = 'cortex'\n",
+    "# all, cortex, early"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "id": "78a8a954",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 0. A default module will be inferred based on the other PCoders.\n",
+      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 0. A default module will be inferred based on the other PCoders.\n",
       "  config = parse_toml(config_file)\n",
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 0. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
+      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 0. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
       "  config = parse_toml(config_file)\n",
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 1. A default module will be inferred based on the other PCoders.\n",
+      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 1. A default module will be inferred based on the other PCoders.\n",
       "  config = parse_toml(config_file)\n",
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 1. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
+      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 1. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
       "  config = parse_toml(config_file)\n",
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 2. A default module will be inferred based on the other PCoders.\n",
+      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 2. A default module will be inferred based on the other PCoders.\n",
       "  config = parse_toml(config_file)\n",
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 2. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
-      "  config = parse_toml(config_file)\n",
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/torch/nn/functional.py:780: UserWarning: Note that order of the arguments: ceil_mode and return_indices will changeto match the args list in nn.MaxPool2d in a future release.\n",
-      "  warnings.warn(\"Note that order of the arguments: ceil_mode and return_indices will change\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "predify.predify(net, 'pconfigs/a1_default.toml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 3. A default module will be inferred based on the other PCoders.\n",
-      "  config = parse_toml(config_file)\n",
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 3. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
-      "  config = parse_toml(config_file)\n",
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 4. A default module will be inferred based on the other PCoders.\n",
-      "  config = parse_toml(config_file)\n",
-      "/Users/chingfang/opt/anaconda3/envs/hcnn/lib/python3.9/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 4. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
+      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 2. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
       "  config = parse_toml(config_file)\n"
      ]
     }
    ],
    "source": [
-    "predify.predify(net, 'pconfigs/all_default.toml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 0. A default module will be inferred based on the other PCoders.\n",
-      "  config = parse_toml(config_file)\n",
-      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 0. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
-      "  config = parse_toml(config_file)\n",
-      "/home/es3773/.local/lib/python3.7/site-packages/torch/nn/functional.py:780: UserWarning: Note that order of the arguments: ceil_mode and return_indices will changeto match the args list in nn.MaxPool2d in a future release.\n",
-      "  warnings.warn(\"Note that order of the arguments: ceil_mode and return_indices will change\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "predify.predify(net, 'pconfigs/conv3_default.toml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 1. A default module will be inferred based on the other PCoders.\n",
-      "  config = parse_toml(config_file)\n",
-      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 1. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
-      "  config = parse_toml(config_file)\n",
-      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 2. A default module will be inferred based on the other PCoders.\n",
-      "  config = parse_toml(config_file)\n",
-      "/share/issa/users/es3773/predify/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 2. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
-      "  config = parse_toml(config_file)\n"
-     ]
-    }
-   ],
-   "source": [
-    "predify.predify(net, 'pconfigs/conv345_default.toml')"
+    "predify.predify(net, f'pconfigs/{toml_file}.toml')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e2595f0b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -176,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
