Plot learned hyperparameter vals for hyperp training

--- a/src/models/01-validate-net-outputs.ipynb
+++ b/src/models/01-validate-net-outputs.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b0e9b045",
    "metadata": {},
    "source": [
     "# Tested for `networks_2022`"
@@ -9,7 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "5f7dc557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "50a54801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +46,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d41e3148",
    "metadata": {},
    "source": [
     "# Compare Torch net to Tensorflow net"
@@ -50,9 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "7760982d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/share/issa/users/es3773/hallucnn/src/models/layers.py:78: UserWarning: Inconsistent tf pad calculation in ConvLayer.\n",
+      "  warnings.warn('Inconsistent tf pad calculation in ConvLayer.')\n",
+      "/share/issa/users/es3773/hallucnn/src/models/layers.py:173: UserWarning: Inconsistent tf pad calculation: 0, 1\n",
+      "  warnings.warn(f'Inconsistent tf pad calculation: {pad_left}, {pad_right}')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[229, 312, 525, 3, 393, 5, 6, 7, 8, 9, 10, 11, 12, 13, 126, 108, 15, 298, 17, 46]\n"
+     ]
+    }
+   ],
    "source": [
     "# Torch network outputs\n",
     "net = BranchedNetwork()\n",
@@ -74,9 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "5448e176",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[229 312 525   3 393   5   6   7   8   9  10  11  12  13 126 108  15 298\n",
+      "  17  46]\n"
+     ]
+    }
+   ],
    "source": [
     "# Tensorflow network outputs\n",
     "tf_y_hats = np.array([229, 312, 525, 3, 393, 5, 6, 7, 8, 9, 10, 11, 12, 13, 126, 108, 15, 298, 17, 46, 152, 388, 278, 459, 256, 23, 14, 25, 26, 27, 129, 29, 30, 31, 63, 337, 34, 216, 36, 37, 38, 241, 40, 41, 183, 42, 393, 240, 45, 196, 46, 487, 48, 129, 142, 51, 269, 519, 54, 55, 284, 57, 65, 58, 239, 59, 376, 62, 63, 158, 345, 66, 67, 68, 69, 70, 394, 72, 494, 74, 109, 75, 48, 78, 343, 455, 487, 413, 82, 109, 84, 496, 243, 490, 9, 24, 89, 0, 110, 259])\n",
@@ -86,16 +119,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "8e4f83d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/ipykernel_launcher.py:2: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "# Number of matches\n",
     "print(len(np.where(tf_y_hats == np.array(y_hats))[0]))"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e88827f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e6390eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fef221ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct = []\n",
+    "for ii in range(len(tf_y_hats)):\n",
+    "    if tf_y_hats[ii] == labels[ii]:\n",
+    "        correct.append(1)\n",
+    "    else:\n",
+    "        correct.append(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f57bda44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.47\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(correct))"
+   ]
+  },
+  {
    "cell_type": "markdown",
+   "id": "44e9b24e",
    "metadata": {},
    "source": [
     "# Compare Torch net to Ground truth labels\n",
@@ -104,7 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "3aee1e9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "292b2360",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "e8600f3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "215029b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +252,7 @@
     "\n",
     "with h5py.File(f\"{engram_dir}PsychophysicsWord2017W_not_resampled.hdf5\", 'r') as f_in:\n",
     "    for ind in range(len(f_in['data'])):\n",
-    "        word, genre =r net(torch.tensor(np.reshape( f_in['data'][ind],(164,400))))\n",
+    "        word, genre =net(torch.tensor(np.reshape( f_in['data'][ind],(164,400))))\n",
     "        \n",
     "        y_hat = int(torch.argmax(word))\n",
     "        y_hats.append(y_hat)\n",
@@ -158,6 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aec79283",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,6 +277,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0361f636",
    "metadata": {},
    "source": [
     "# Compare Predified-Net with Torch Net\n",
@@ -181,6 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db2e88c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cfc48b06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,6 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e8745a7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "90404daa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bebfc00b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -269,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
