Rename jupyter notebooks for clarity

--- a/src/models/02-predify-network.ipynb
+++ b/src/models/02-predify-network.ipynb
@@ -34,40 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1237af1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "toml_file = 'cortex'\n",
-    "# all, cortex, early"
+    "toml_file = 'shared'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "78a8a954",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 0. A default module will be inferred based on the other PCoders.\n",
-      "  config = parse_toml(config_file)\n",
-      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 0. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
-      "  config = parse_toml(config_file)\n",
-      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 1. A default module will be inferred based on the other PCoders.\n",
-      "  config = parse_toml(config_file)\n",
-      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 1. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
-      "  config = parse_toml(config_file)\n",
-      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'predictor' is not defined for PCoder number 2. A default module will be inferred based on the other PCoders.\n",
-      "  config = parse_toml(config_file)\n",
-      "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/base.py:158: UserWarning: 'hyperparameters' is not defined for PCoder number 2. Default values of feedforward=0.3, feedback=0.3, pc=0.01 will be set.\n",
-      "  config = parse_toml(config_file)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predify.predify(net, f'pconfigs/{toml_file}.toml')"
    ]
